--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
-    "rxjs": "~7.4.0",
+    "primeng": "^15.4.1",
+    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
